FIX: cards section overflow

--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,11 @@
 .app-main {
     flex-grow: 1;
     display: flex;
+    height: 0; 
 }
 
 .app-menu {
-  width: 70px;  
+  width: 70px; 
   background-color: #051E34;
   color: white;
   background-image: url(../img/sidebar-bg.png);
@@ -62,6 +63,7 @@
 
 .app-components {
     flex-grow: 1;
+    overflow: auto;
 }
 
 /*HEADER*/
